# CS205-Matrix

./: .gitignore  CMakeLists.txt  Complex.cpp  Complex.h  Makefile  Matrix.cpp  Matrix.h  README.md  compile.sh  main.cpp
include/: DNN.h  Matrix.h  SparseMatrix.h  exception.h
src/: DNN.cpp  main.cpp
test/: MatrixTest.cpp  SparseMatrixTest.cpp
